@@ -7,7 +7,7 @@ import static java.util.stream.Collectors.toList;
 import static javax.json.Json.createObjectBuilder;
 import static uk.gov.justice.services.core.annotation.Component.EVENT_PROCESSOR;
 import static uk.gov.justice.services.core.enveloper.Enveloper.envelop;
-import static uk.gov.justice.services.messaging.JsonEnvelope.envelopeFrom;
+import static uk.gov.moj.cpp.progression.Originator.assembleEnvelopeWithPayloadAndMetaDetails;
 
 import uk.gov.justice.core.courts.CaseDocument;
 import uk.gov.justice.core.courts.CourtDocument;
@@ -16,21 +16,27 @@ import uk.gov.justice.core.courts.DocumentTypeRBAC;
 import uk.gov.justice.core.courts.Material;
 import uk.gov.justice.core.courts.NowDocument;
 import uk.gov.justice.core.courts.NowDocumentRequested;
-import uk.gov.justice.core.courts.nowdocument.NowDocumentContent;
+import uk.gov.justice.core.courts.NowsDocumentGenerated;
 import uk.gov.justice.core.courts.nowdocument.NowDocumentRequest;
-import uk.gov.justice.core.courts.nowdocument.ProsecutionCase;
 import uk.gov.justice.services.common.converter.JsonObjectToObjectConverter;
 import uk.gov.justice.services.common.converter.ObjectToJsonObjectConverter;
+import uk.gov.justice.services.common.converter.jackson.ObjectMapperProducer;
 import uk.gov.justice.services.core.annotation.Handles;
 import uk.gov.justice.services.core.annotation.ServiceComponent;
 import uk.gov.justice.services.core.requester.Requester;
 import uk.gov.justice.services.core.sender.Sender;
 import uk.gov.justice.services.messaging.Envelope;
 import uk.gov.justice.services.messaging.JsonEnvelope;
+import uk.gov.moj.cpp.progression.formatters.AccountingDivisionCodeFormatter;
+import uk.gov.moj.cpp.progression.service.ConversionFormat;
+import uk.gov.moj.cpp.progression.service.DocumentGenerationRequest;
 import uk.gov.moj.cpp.progression.service.DocumentGeneratorService;
+import uk.gov.moj.cpp.progression.service.FileService;
 import uk.gov.moj.cpp.progression.service.RefDataService;
+import uk.gov.moj.cpp.progression.service.SystemDocGeneratorService;
 import uk.gov.moj.cpp.progression.service.UsersGroupService;
 
+import java.io.StringReader;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -38,6 +44,7 @@ import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
@@ -47,7 +54,13 @@ import javax.inject.Inject;
 import javax.json.Json;
 import javax.json.JsonArray;
 import javax.json.JsonObject;
+import javax.json.JsonObjectBuilder;
+import javax.json.JsonReader;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -55,9 +68,11 @@ import org.slf4j.LoggerFactory;
 @SuppressWarnings("squid:S00112")
 public class NowsRequestedEventProcessor {
 
-    public static final UUID NOW_DOCUMENT_TYPE_ID = UUID.fromString("460fbc00-c002-11e8-a355-529269fb1459");
-    public static final String READ_USER_GROUPS = "readUserGroups";
-    public static final String COURT_DOCUMENT_TYPE_RBAC = "courtDocumentTypeRBAC";
+    private static final String FINANCIAL_ORDER_DETAILS = "financialOrderDetails";
+    private static final String ACCOUNTING_DIVISION_CODE = "accountingDivisionCode";
+    private static final UUID NOW_DOCUMENT_TYPE_ID = fromString("460fbc00-c002-11e8-a355-529269fb1459");
+    private static final String READ_USER_GROUPS = "readUserGroups";
+    private static final String COURT_DOCUMENT_TYPE_RBAC = "courtDocumentTypeRBAC";
     protected static final String PROGRESSION_COMMAND_CREATE_COURT_DOCUMENT = "progression.command.create-court-document";
     private static final String PUBLIC_PROGRESSION_NOW_DOCUMENT_REQUESTED = "public.progression.now-document-requested";
     private static final String DOCUMENT_TYPE_DESCRIPTION = "Electronic Notifications" ;
@@ -65,13 +80,18 @@ public class NowsRequestedEventProcessor {
     private static final String APPLICATION_PDF = "application/pdf";
 
     private static final Logger LOGGER = LoggerFactory.getLogger(NowsRequestedEventProcessor.class);
+    private static final String PROGRESSION_COMMAND_RECORD_NOWS_DOCUMENT_SENT = "progression.command.record-nows-document-sent";
+    public static final String MATERIAL_ID = "materialId";
+    public static final String NOW_DOCUMENT_REQUEST = "nowDocumentRequest";
     private final Sender sender;
     private final JsonObjectToObjectConverter jsonObjectToObjectConverter;
     private final ObjectToJsonObjectConverter objectToJsonObjectConverter;
     private final DocumentGeneratorService documentGeneratorService;
     private final RefDataService refDataService;
     private final UsersGroupService usersGroupService;
-
+    private final ObjectMapper mapper;
+    private final SystemDocGeneratorService systemDocGeneratorService;
+    private final FileService fileService;
     @Inject
     private Requester requester;
 
@@ -81,21 +101,24 @@ public class NowsRequestedEventProcessor {
                                        final JsonObjectToObjectConverter jsonObjectToObjectConverter,
                                        final ObjectToJsonObjectConverter objectToJsonObjectConverter,
                                        final RefDataService refDataService,
-                                       final UsersGroupService usersGroupService) {
+                                       final UsersGroupService usersGroupService,
+                                       final FileService fileService,
+                                       final SystemDocGeneratorService systemDocGeneratorService) {
         this.sender = sender;
+        this.documentGeneratorService = documentGeneratorService;
         this.jsonObjectToObjectConverter = jsonObjectToObjectConverter;
         this.objectToJsonObjectConverter = objectToJsonObjectConverter;
-        this.documentGeneratorService = documentGeneratorService;
         this.refDataService = refDataService;
         this.usersGroupService = usersGroupService;
+        this.fileService = fileService;
+        this.systemDocGeneratorService = systemDocGeneratorService;
+        this.mapper = new ObjectMapperProducer().objectMapper();
     }
 
     @Handles("progression.event.now-document-requested")
-    public void processNowDocumentRequested(final JsonEnvelope event) {
+    public void processNowDocumentRequested(final JsonEnvelope envelope) {
 
-        final UUID userId = fromString(event.metadata().userId().orElseThrow(() -> new RuntimeException("UserId missing from event.")));
-
-        final JsonObject requestJson = event.payloadAsJsonObject();
+        final JsonObject requestJson = envelope.payloadAsJsonObject();
 
         if (LOGGER.isInfoEnabled()) {
             LOGGER.info("Nows requested payload - {}", requestJson);
@@ -105,18 +128,115 @@ public class NowsRequestedEventProcessor {
 
         final NowDocumentRequest nowDocumentRequest = nowDocumentRequested.getNowDocumentRequest();
 
-        if (nowDocumentRequest.getStorageRequired()) {
-            addAsCourtDocuments(event, nowDocumentRequest);
+        final boolean isStorageRequired = nowDocumentRequest.getStorageRequired();
+        if (isStorageRequired) {
+            addAsCourtDocuments(envelope, nowDocumentRequest);
         }
 
-        final String fileName = documentGeneratorService.generateNow(sender, event, userId, nowDocumentRequest);
+        final UUID hearingId = nowDocumentRequest.getHearingId();
+
+        final UUID materialId = nowDocumentRequest.getMaterialId();
+
+        final String templateName = nowDocumentRequested.getTemplateName();
+
+        final String fileName = nowDocumentRequested.getFileName();
+
+        final JsonObject nowDocumentContentJson = objectToJsonObjectConverter.convert(nowDocumentRequest.getNowContent());
+
+        final JsonObject updatedNowContent = updateNowContentWithAccountDivisionCode(nowDocumentContentJson);
+
+        final UUID payloadFileId = fileService.storePayload(updatedNowContent, fileName, templateName);
+
+        sendRequestToGenerateDocumentAsync(envelope, templateName, materialId.toString(), payloadFileId);
+
+        final JsonObjectBuilder payloadBuilder = createObjectBuilder()
+                .add(MATERIAL_ID, materialId.toString())
+                .add("payloadFileId", payloadFileId.toString())
+                .add("hearingId", hearingId.toString())
+                .add("fileName", fileName)
+                .add("cpsProsecutionCase", nowDocumentRequested.getCpsProsecutionCase());
+
+        if (nonNull(nowDocumentRequest.getNowDistribution())) {
+            payloadBuilder.add("nowDistribution", objectToJsonObjectConverter.convert(nowDocumentRequest.getNowDistribution()));
+        }
+        if (nonNull(nowDocumentRequest.getNowContent().getOrderAddressee())) {
+            payloadBuilder.add("orderAddressee", objectToJsonObjectConverter.convert(nowDocumentRequest.getNowContent().getOrderAddressee()));
+        }
+
+        sender.send(envelop(payloadBuilder.build())
+                .withName(PROGRESSION_COMMAND_RECORD_NOWS_DOCUMENT_SENT)
+                .withMetadataFrom(envelope));
+
+        final JsonObjectBuilder publicMessageBuilder = createObjectBuilder()
+                .add(MATERIAL_ID, requestJson.getString(MATERIAL_ID))
+                .add(NOW_DOCUMENT_REQUEST, requestJson.getJsonObject(NOW_DOCUMENT_REQUEST));
+
         if (nowDocumentRequest.getTemplateName().startsWith("EDT_")) {
-            final List<Envelope<JsonObject>> commandAddCourtDocumentEnvolopeList = getAddCourtDocumentEnvelope(event, nowDocumentRequested, fileName);
+            final List<Envelope<JsonObject>> commandAddCourtDocumentEnvolopeList = getAddCourtDocumentEnvelope(envelope, nowDocumentRequested, fileName);
             commandAddCourtDocumentEnvolopeList.forEach(sender::send);
         }
-        sender.send(envelop(event.payloadAsJsonObject())
+
+        sender.send(envelop(publicMessageBuilder.build())
                 .withName(PUBLIC_PROGRESSION_NOW_DOCUMENT_REQUESTED)
-                .withMetadataFrom(event));
+                .withMetadataFrom(envelope));
+
+    }
+
+    @Handles("progression.event.nows-document-generated")
+    public void processNowsDocumentGenerated(final JsonEnvelope envelope) {
+
+        final JsonObject requestJson = envelope.payloadAsJsonObject();
+
+        if (LOGGER.isInfoEnabled()) {
+            LOGGER.info("NOWs document generated payload - {}", requestJson);
+        }
+
+        final NowsDocumentGenerated nowsDocumentGenerated = jsonObjectToObjectConverter.convert(requestJson, NowsDocumentGenerated.class);
+
+        final JsonEnvelope jsonEnvelope = assembleEnvelopeWithPayloadAndMetaDetails(requestJson,
+                envelope.metadata().name(), nowsDocumentGenerated.getUserId().toString());
+
+        documentGeneratorService.addDocumentToMaterial(sender, jsonEnvelope, nowsDocumentGenerated);
+    }
+
+    private void sendRequestToGenerateDocumentAsync(
+            final JsonEnvelope envelope, final String templateName, final String materialId, final UUID fileId) {
+
+        final DocumentGenerationRequest documentGenerationRequest = new DocumentGenerationRequest(
+                "NOWs",
+                templateName,
+                ConversionFormat.PDF,
+                materialId,
+                fileId,
+                null);
+
+        systemDocGeneratorService.generateDocument(documentGenerationRequest, envelope);
+    }
+
+    private JsonObject updateNowContentWithAccountDivisionCode(final JsonObject jsonObject) {
+
+        final JsonNode jsonNode = mapper.valueToTree(jsonObject);
+
+        if (Objects.nonNull(jsonNode.path(FINANCIAL_ORDER_DETAILS)) && !(jsonNode.path(FINANCIAL_ORDER_DETAILS).isMissingNode())) {
+            final int value = jsonObject.getJsonObject(FINANCIAL_ORDER_DETAILS).getInt(ACCOUNTING_DIVISION_CODE);
+            final ObjectNode financialOrderDetailsNode = (ObjectNode) jsonNode.path(FINANCIAL_ORDER_DETAILS);
+            financialOrderDetailsNode.put(ACCOUNTING_DIVISION_CODE, AccountingDivisionCodeFormatter
+                    .formatAccountingDivisionCode(Integer.toString(value)));
+            try {
+                return jsonFromString(mapper.writeValueAsString(jsonNode));
+            } catch (JsonProcessingException e) {
+                throw new RuntimeException(e);
+            }
+        }
+
+        return jsonObject;
+    }
+
+    private static JsonObject jsonFromString(final String jsonObjectStr) {
+        final JsonReader jsonReader = Json.createReader(new StringReader(jsonObjectStr));
+        final JsonObject object = jsonReader.readObject();
+        jsonReader.close();
+        return object;
     }
 
     private List<Envelope<JsonObject>> getAddCourtDocumentEnvelope(final JsonEnvelope event, final NowDocumentRequested nowDocumentRequested, final String fileName) {
@@ -124,12 +244,12 @@ public class NowsRequestedEventProcessor {
         final UUID materialId = nowDocumentRequested.getMaterialId();
 
         final List<Envelope<JsonObject>> commandAddCourtDocumentEnvolopeList = nowDocumentRequested.getNowDocumentRequest().getCases().stream().map(prosecutionCaseId -> {
-                    CourtDocument courtDocument = buildCourtDocument(prosecutionCaseId, materialId, fileName, false);
-                    final JsonObject jsonObject = createObjectBuilder()
-                            .add("materialId", nowDocumentRequested.getMaterialId().toString())
-                            .add("courtDocument", objectToJsonObjectConverter.convert(courtDocument)).build();
+            CourtDocument courtDocument = buildCourtDocument(prosecutionCaseId, materialId, fileName, false);
+            final JsonObject jsonObject = createObjectBuilder()
+                    .add(MATERIAL_ID, nowDocumentRequested.getMaterialId().toString())
+                    .add("courtDocument", objectToJsonObjectConverter.convert(courtDocument)).build();
             return envelop(jsonObject).withName("progression.command.add-court-document").withMetadataFrom(event);
-                }).collect(toList());
+        }).toList();
         LOGGER.info("EDT court document list size {}", commandAddCourtDocumentEnvolopeList.size());
         return commandAddCourtDocumentEnvolopeList;
     }
@@ -153,15 +273,6 @@ public class NowsRequestedEventProcessor {
                 .withMaterials(Collections.singletonList(material))
                 .withSendToCps(cpsFlag)
                 .build();
-    }
-
-    private boolean isCpsProsecutionCase(final NowDocumentContent nowContent) {
-        return nowContent.getCases().stream()
-                .filter(pc -> nonNull(pc.getIsCps()))
-                .filter(ProsecutionCase::getIsCps)
-                .findFirst()
-                .map(ProsecutionCase::getIsCps)
-                .orElse(false);
     }
 
     private void addAsCourtDocuments(final JsonEnvelope incomingEvent, final NowDocumentRequest nowDocumentRequest) {
@@ -226,7 +337,7 @@ public class NowsRequestedEventProcessor {
 
     private List<String> getAssociatedGroups(final Map<String, List<JsonObject>> resultsGroupMappings, final String resultGroup) {
         final List<JsonObject> resultsList = resultsGroupMappings.getOrDefault(resultGroup.toUpperCase(), Collections.emptyList());
-        return resultsList.stream().map(jsonObject -> jsonObject.getString("groupName")).collect(toList());
+        return resultsList.stream().map(jsonObject -> jsonObject.getString("groupName")).toList();
     }
 
     private List<String> getAllGroups(final Map<String, List<JsonObject>> resultsGroupMap) {
